--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_coupon
-spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.url=_database_
+spring.datasource.username=_user_
+spring.datasource.password=_password_
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
