--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerConnection'
-    repository: 'JavaMavenImage'
+    repository: 'javamavenimage'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
