--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,11 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerConnection'
+    command: 'login'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'DockerConnection'
     repository: 'javamavenimage'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
