--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,11 +25,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'DockerConnection'
-    command: 'login'
-
-- task: Docker@2
-  inputs:
-    containerRegistry: 'DockerConnection'
     repository: 'javamavenimage'
-    command: 'buildAndPush'
+    command: 'build'
     Dockerfile: '**/Dockerfile'
