--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,8 @@ steps:
     repository: 'javamavenimage'
     command: 'build'
     Dockerfile: '**/Dockerfile'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
